--- a/src/App.css
+++ b/src/App.css
@@ -21,17 +21,29 @@
     color: white;
 } */
 
-
-/* .bodyStyle {
-    display: flex;
-    flex-direction: column;
-}
-
 .bodyStyle li {
     list-style: none;
+    text-align: center;
 }
 
 .bodyStyle a {
     text-decoration: none;
     color: black;
-} */
+}
+
+.fa-facebook {
+    color: blue;
+}
+
+.fa-twitter {
+    color: rgb(89, 89, 241);
+}
+
+.icon:hover {
+    background: linear-gradient(90deg, rgb(182, 94, 254) 0%, rgba(73, 63, 252, 1)100%);
+    color: #fff;
+}
+
+.footerStyle {
+    /* background-color: black; */
+}
